# my-first-pipeline

./: CMakeLists.txt  buildTest.sh  main.cpp
.github/workflows/: Cmake.yml
